@@ -2,8 +2,8 @@ package com.freezzah.minecities.blocks.building;
 
 import com.freezzah.minecities.city.extensions.IWaterGenerator;
 import com.freezzah.minecities.utils.Requirement;
+import org.jetbrains.annotations.NotNull;
 
-import java.util.Arrays;
 import java.util.List;
 
 public class WaterCollectorBuilding extends AbstractBuilding implements IWaterGenerator {
@@ -28,8 +28,9 @@ public class WaterCollectorBuilding extends AbstractBuilding implements IWaterGe
 
     //region IBuilding
     @Override
+    @NotNull
     List<Requirement> getRequirements() {
-        return Arrays.asList(new Requirement(0,0,0));
+        return List.of(new Requirement(0, 0, 0));
     }
     @Override
     public boolean checkLevelRequirements(byte desiredLevel) {
