@@ -1,17 +1,17 @@
 package com.freezzah.minecities.blocks.building;
 
-import com.freezzah.minecities.city.extensions.IWaterGenerator;
 import com.freezzah.minecities.city.extensions.IWaterGeneratorNearby;
 import com.freezzah.minecities.utils.Requirement;
+import org.jetbrains.annotations.NotNull;
 
-import java.util.Arrays;
 import java.util.List;
 
 public class WellBuilding extends AbstractBuilding implements IWaterGeneratorNearby {
     //region IBuilding
     @Override
+    @NotNull
     List<Requirement> getRequirements() {
-        return Arrays.asList(new Requirement(0,0,0));
+        return List.of(new Requirement(0, 0, 0));
     }
     @Override
     public boolean checkLevelRequirements(byte desiredLevel) {
